Fix alignment of show dropdown

--- a/scss/components/_pagination.scss
+++ b/scss/components/_pagination.scss
@@ -8,3 +8,12 @@
 .path-mod .nhsuk-pagination {
     display: none !important;
 }
+
+// Fix for vertical alignment in Moodle pagination
+// Overrides global NHS button margins that push the dropdown out of alignment.
+[data-region="paging-control-container"] {
+    .btn, 
+    .page-link {
+        margin-bottom: 0 !important;
+    }
+}
